ee/codegen/python_file_merging/tests/fixtures/nodes/invalid_syntax/expected.py
from vellum.workflows import BaseNode
from vellum.workflows.nodes import BaseNode


class MyCustomNode(BaseNode):
    pass
